--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,4 +28,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ghcr.io/sajjadgholamipour/fastapi-app:latest
+        tags: ghcr.io/${{ github.actor }}/fastapi-app:latest
