--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -1,23 +1,21 @@
 [SERVICE]
-    Flush        5
+    Flush        1
+    Daemon       Off
     Log_Level    info
     Parsers_File parsers.conf
 
 [INPUT]
-    Name              forward
-    Listen            0.0.0.0
-    Port              24224
-
-[FILTER]
-    Name              modify
-    Match             *
-    Add               hostname ${HOSTNAME}
+    Name         forward
+    Listen       0.0.0.0
+    Port         24224
 
 [OUTPUT]
-    Name  es
-    Match *
-    Host  elasticsearch
-    Port  9200
-    Index fluentbit
-    Type  _doc
+    Name            es
+    Match           *
+    Host            elasticsearch
+    Port            9200
+    Index           fluentbit
     Logstash_Format On
+    Suppress_Type_Name On
+    Generate_ID     On
+    Replace_Dots    On
